--- a/app.json
+++ b/app.json
@@ -9,9 +9,11 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
+      "bundlerIdentifier": "com.getoutbcn.app",
       "supportsTablet": true
     },
     "android": {
+      "package": "com.getoutbcn.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -36,6 +38,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "4d42bf57-4731-4445-a54c-7a80a92556b1"
+      }
     }
   }
 }
